--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -28,6 +32,7 @@ android {
 dependencies {
     def nav_version = "2.1.0"
     // Kotlin
+
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     def material_version = "1.1.0-alpha07"
