--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -45,6 +50,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     implementation "org.jetbrains.anko:anko-common:$anko_version"
+
+    // WebRTC dependency
+    implementation 'org.webrtc:google-webrtc:1.0.+'--
 
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
