- working self video

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,13 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildTypes {
@@ -52,7 +57,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$anko_version"
 
     // WebRTC dependency
-    implementation 'org.webrtc:google-webrtc:1.0.+'--
+    implementation 'org.webrtc:google-webrtc:1.0.28513'
 
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
