--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     // WebRTC dependency
     implementation 'org.webrtc:google-webrtc:1.0.28513'
 
+    // Socket.io for signalling
+    implementation 'io.socket:socket.io-client:0.8.3'
+
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
