--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,11 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.preference:preference:1.1.0'
 
     implementation "org.jetbrains.anko:anko-common:$anko_version"
 
