--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation "org.jetbrains.anko:anko-common:$anko_version"
 
@@ -84,7 +86,7 @@ dependencies {
 
     // Getting a "Could not find" error? Make sure that you've added
     // Google's Maven repository to your root-level build.gradle file
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
 
 
