--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://tokbox.bintray.com/maven' }
     }
 }
 
