--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.example.studypal"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,8 @@ dependencies {
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.opentok.android:opentok-android-sdk:2.16.3'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    def lottieVersion = "3.3.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     def material_version = "1.1.0-alpha07"
     implementation "com.google.android.material:material:$material_version"
@@ -61,12 +63,10 @@ dependencies {
 
     implementation "org.jetbrains.anko:anko-common:$anko_version"
 
-    // WebRTC dependency
-    //implementation 'org.webrtc:google-webrtc:1.0.28513'
-
-    // Socket.io for signalling
-    implementation 'io.socket:socket.io-client:0.8.3'
-
+// Use the most recent version of CameraX, currently that is alpha06.
+    def camerax_version = '1.0.0-alpha06'
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
@@ -85,7 +85,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.2.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-
+    implementation 'com.android.volley:volley:1.1.1'
     // Getting a "Could not find" error? Make sure that you've added
     // Google's Maven repository to your root-level build.gradle file
     implementation 'androidx.multidex:multidex:2.0.0'
